--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@reduxjs/toolkit": "^1.3.6",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "expo": "~37.0.3",
