--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@reduxjs/toolkit": "^1.3.6",
-    "@types/redux": "^3.6.0",
-    "@types/styled-components": "^5.1.0",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
     "expo-font": "~8.1.0",
@@ -35,6 +33,9 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.0",
     "babel-preset-expo": "~8.1.0",
     "typescript": "~3.8.3"
   },
