--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
+    "expo-blur": "~8.1.0",
     "expo-font": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -37,6 +38,7 @@
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "babel-preset-expo": "~8.1.0",
+    "tslib": "^2.0.0",
     "typescript": "~3.8.3"
   },
   "private": true
