--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-web-swiper": "^2.1.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
