--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-apple-authentication": "~2.1.0",
     "expo-asset": "~8.1.5",
     "expo-blur": "~8.1.0",
     "expo-font": "~8.1.0",
