--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "awesomeBuenosAires",
+    "name": "awesomeBerlin",
     "githubUrl": "https://github.com/plusbeauxjours/airbnp-app",
     "description": "Airbnb clone app",
-    "slug": "awesomeBuenosAires",
+    "slug": "awesomeBerlin",
     "platforms": ["ios", "android"],
     "sdkVersion": "36.0.0",
     "version": "1.0.5",
@@ -21,12 +21,12 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "awesomeBuenosAires.plusbeauxjours",
+      "bundleIdentifier": "awesomeBerlin.plusbeauxjours",
       "usesAppleSignIn": true
     },
     "android": {
       "versionCode": 5,
-      "package": "awesomeBuenosAires.plusbeauxjours",
+      "package": "awesomeBerlin.plusbeauxjours",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyDv66JZo6YNvVnnQu_x65TK_ik2EF_vCcQ"
